[backend/frontend] Add quick filter on scenario, simulation and atomic testing